# docker_learning

./: .gitignore  CMakeLists.txt  DOCKER_GUIDE.md  README.md  auto_build.sh  docker_build.sh
docker/: docker-compose.yaml
docker/ubuntu-local/: Dockerfile
include/my_project/: math_utils.hpp
src/: main.cpp  math_utils.cpp
tests/: test_math_utils.cpp
